# victron_mqtt

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  extending-victron-support.md  pyproject.toml  pyrightconfig.json  pytest.ini  victron_mqtt.json
.github/: copilot-instructions.md  release-drafter.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/scripts/: merge_topics.py  strings_seed.json
.github/workflows/: build-docs.yml  generated-files-check.yml  publish.yml  release-drafter.yml  static-tests-comment.yml  static-tests.yml  update-ha-core.yml
docs/: conf.py  index.html  index.rst
docs/api/: modules.rst  victronvenusclient.rst  victronvenusclient.utils.rst
examples/: list_devices_and_metrics.py
src/: __about__.py  _topic_map.py  constants.py  device.py
src/utils/: view_metrics.py
src/victron_mqtt/: __about__.py  __init__.py  _topic_map.py  _unwrappers.py  _victron_enums.py  _victron_topics.py  constants.py  data_classes.py  device.py  hub.py  metric.py  switch.py  victron_enums.py
src/victron_mqtt/utils/: dump_mqtt.py  dump_victron_mqtt.py  view_metrics.py
tests/: .pylintrc  __init__.py  basic_test.py  conftest.py  deviceandmetrics_test.py  parsed_topics_test.py  static_hub_test.py  static_test.py  test_product_capabilities.py  test_unwrappers.py
victron_mqtt/: __init__.py  _unwrappers.py  _victron_enums.py  _victron_formulas.py  _victron_products.py  _victron_topics.py  constants.py  data_classes.py  device.py  formula_common.py  formula_metric.py  hub.py  id_utils.py  metric.py  switch.py  writable_formula_metric.py  writable_metric.py
victron_mqtt/testing/: __init__.py  hub_helpers.py
victron_mqtt/utils/: detect_breaking_changes.py  dumb_mqtt_listener.py  dump_mqtt.py  dump_victron_mqtt.py  view_metrics.py
