[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "victron_mqtt"
version = "2026.4.7"
description = "Python library for communicating with Victron Venus OS MQTT interface"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
keywords = ["victron", "mqtt", "venus os"]
authors = [
  { name = "Tomer", email = "57483589+tomer-w@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "paho-mqtt>=1.6.1",
]

[tool.hatch.build.targets.wheel]
packages = ["victron_mqtt"]
exclude = [".github", ".vscode"]

[project.urls]
Documentation = "https://github.com/tomer-w/victron_mqtt#readme"
Issues = "https://github.com/tomer-w/victron_mqtt/issues"
Source = "https://github.com/tomer-w/victron_mqtt"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:victron_mqtt tests}"

[tool.hatch.envs.test]
dependencies = [
    "pytest",
    "pytest-mock",
    "pytest-asyncio",
    "victron_mqtt",
    "coverage"
]

commands = [
    "pytest --cov=victron_mqtt",  # Example command for running tests with coverage
]

[tool.hatch.envs.hatch-test]
extra-dependencies = [
  "pyfakefs",
  "pytest-asyncio",
  "pytest-benchmark",
  "pytest-playwright",
  "pytest-print",
]

[tool.hatch.envs.docs]
dependencies = [
    "sphinx",
    "sphinx-autodoc-typehints",  # Optional: for type hints in docs
    "sphinx-rtd-theme",         # Optional: for a clean, professional theme
]

[tool.hatch.envs.docs.scripts]
build = "sphinx-build -b html docs docs/_build/html"


[tool.coverage.run]
source_pkgs = ["victron_mqtt"]
branch = true
parallel = true
omit = [
  "victron_mqtt/utils/*",
]

[tool.coverage.paths]
victron_mqtt = ["victron_mqtt"]

[tool.coverage.report]
fail_under = 95
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.ruff]
exclude = [".git", "__pycache__", "node_modules", "public", "venv"]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle + pyflakes
    "I",              # isort
    "UP",             # pyupgrade
    "B",              # flake8-bugbear
    "SIM",            # flake8-simplify
    "RET",            # flake8-return
    "PIE",            # flake8-pie
    "RUF",            # ruff-specific
    "PERF",           # perflint
    "FURB",           # refurb
    "C4",             # flake8-comprehensions
    "TC",             # flake8-type-checking
    "PTH",            # flake8-use-pathlib
    "PLC",            # pylint convention
    "PLW",            # pylint warnings
    "PLR",            # pylint refactor
    "G",              # flake8-logging-format
    "PT",             # flake8-pytest-style
    "T20",            # flake8-print
    "DTZ",            # flake8-datetimez
    "PGH",            # pygrep-hooks
    "SLF",            # flake8-self
]
ignore = [
    "E501",    # line-too-long (formatter responsibility)
    "PLR2004", # magic-value-comparison
    "PLR0913", # too-many-arguments
    "PLR0912", # too-many-branches
    "PLR0915", # too-many-statements
    "RET504",  # unnecessary-assign (readable intermediate vars)
    "SLF001",  # private-member-access (internal cross-module access)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "SLF001",  # private-member-access (tests access internals)
    "PLC0415", # import-outside-top-level
    "T201",    # print (debug output)
    "DTZ001",  # call-datetime-without-tzinfo
    "DTZ006",  # call-datetime-fromtimestamp
    "PT012",   # pytest-raises-with-multiple-statements
]
"victron_mqtt/utils/*" = [
    "T201",    # print (CLI tool output)
]
".github/scripts/*" = [
    "T201",    # print (CLI tool output)
    "SIM108",  # ternary operator (readability)
]

[tool.pylint.format]
max-line-length = 120

[project.scripts]
victron_mqtt-dump-mqtt = "victron_mqtt.utils.dump_mqtt:main"
